unpackaged/main/default/objects/fferpcore__ERPProduct__c/fferpcore__ERPProduct__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__ErpProductHelp</customHelpPage>
    <description>Stores details of apps that send and receive information using Foundations messaging.</description>
    <label>Registered Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registered Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>