unpackaged/main/default/objects/fferpcore__ERPProduct__c/fields/fferpcore__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DeveloperName__c</fullName>
    <label>Developer Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>