unpackaged/main/default/objects/fferpcore__ERPProduct__c/fields/fferpcore__Obsolete__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No longer in use.</description>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>