unpackaged/main/default/objects/fferpcore__ERPProduct__c/fields/fferpcore__ServicePack__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ServicePack__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Pack</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>