unpackaged/main/default/objects/fferpcore__ERPProduct__c/fields/fferpcore__VersionMajor__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VersionMajor__c</fullName>
    <label>Major Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>