unpackaged/main/default/objects/fferpcore__ERPProduct__c/fields/fferpcore__VersionMinor__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VersionMinor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minor Version</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>