unpackaged/main/default/objects/fferpcore__ERPProduct__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__DeveloperName__c</columns>
    <columns>fferpcore__VersionMajor__c</columns>
    <columns>fferpcore__VersionMinor__c</columns>
    <columns>fferpcore__ServicePack__c</columns>
    <columns>fferpcore__Obsolete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>